ms-cliente/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mscliente
  labels:
    app: mscliente
  namespace: app-micros
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mscliente
  template:
    metadata:
      labels:
        app: mscliente
    spec:
      containers:
        - name: mscliente
          image: mauron/ms-cliente:5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
