ms-cliente/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mscliente
  labels:
    app: mscliente
  namespace: app-micros
spec:
  selector:
    app: mscliente
  ports:
    - name: http
      port: 7090
      targetPort: 8080
  type: LoadBalancer
