ms-cliente/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mscliente-ingress
  namespace: app-micros
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: api.lite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mscliente
                port:
                  number: 7090
